--- a/TODO.org
+++ b/TODO.org
@@ -14,8 +14,9 @@
 #+STARTUP: showall
 
 #+title: The TODO file of APDL-Mode
+* Version 20.4.0 Update v201
 
-* TODO Version 20.3.0 Update v201 docu, melpa
+* TODO Version 20.3.0 Melpa
   DEADLINE: <2020-04-16 Thu>
   feature freeze [2020-03-20 Fr]
 
@@ -55,11 +56,6 @@
      the respective page section on Chrome and Edge!?
    - 1/en, en is variable but fraction not fontified?
 ** check
-   - Check templates (formatting changed strongly!) especially
-     -compilation-template!  Indent is not correct.,
-     -skeleton-function!?
-     - C-s C-s apdl-calculate-indent: Can't deduce sensible column
-       offset, for some templates
    - changed file size without warning to 30 MB what is Emacs-26
      using?
 ** wishes
@@ -77,28 +73,19 @@
        interpreter or Ansys Classics GUI
     6) Melpa README, better wait till emacs-27?
 ** Done
-   - The APDL menu entry in terminal mode is not working => wrong type
-     argument!?
-   - what is .gitattributes
-   - check highlighting of -license-category,should work on white
-     background..
-   - -wb-template-directory depends on melpa version! This is working
-     only for the stable version!
-   - Is the -help-path working without backslashes under Window?, yes it is
-   - Do we need a (require 'apdl-) after Melpa installation? NO
 ** Release proceedures
    Attention: in apdl_keywords.txt there are many trailing whitespaces
    (delete-trailing-whitespace)
 
    whitespace-mode
    package-lint
-     - problems with prefix names and default key bindings...
    checkdoc, flycheck etc. : from makefile?
 
-    # for _mode_version
+    # for makefile
     APDL_MAJOR := 20
     APDL_MINOR := 4
     APDL_PATCH := 0
+    # A-M version
     (tags-query-replace "20\.3\.0" "20.4.0")
     # copyright year
     (tags-query-replace "- 2020" "- 2021")
@@ -107,9 +94,7 @@
     # emacs
     (tags-query-replace "26\.3" "27.1")
     (tags-search "((emacs \"25.1\"))")
-    (tags-query-replace "http:" "https:")
-    # (tags-query-replace "ansys+emacs2020.png" "ansys+emacs2020-03.png")
-    # (tags-query-replace "ANSYS" "Ansys")
+
 
 * DONE 20.2.0 Release
   [2020-03-10 Tue]
