--- a/README.org
+++ b/README.org
@@ -1,5 +1,5 @@
 #+STARTUP: all
-#+DATE: Time-stamp: <2020-03-20>
+#+DATE: Time-stamp: <2020-03-24>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: ':nil *:t -:t ::t <:t H:3 \n:nil ^:t arch:headline
 #+OPTIONS: author:t c:t creator:t d:(not "LOGBOOK") date:t
@@ -25,7 +25,7 @@
 #+INFOJS_OPT:
 #+LATEX_HEADER:
 
-#+title: APDL-Mode
+#+title: APDL-Mode 20.4.0
 The GNU-Emacs major mode for the programming language APDL
 
 [[https://melpa.org/#/apdl-mode][file:https://melpa.org/packages/apdl-mode-badge.svg]]
