--- a/NEWS.org
+++ b/NEWS.org
@@ -1,4 +1,4 @@
-#+DATE: Time-stamp: <2020-03-24>
+#+DATE: Time-stamp: <2020-03-25>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: html-link-use-abs-url:nil html-postamble:t html-preamble:t
 #+OPTIONS: html-scripts:t html-style:t html5-fancy:nil tex:t
@@ -17,8 +17,11 @@
 #+title: News and History of APDL-Mode
 
 Copyright (C) 2006 - 2020  H. Dieter Wilhelm, GPL V3
-** Version 20.4.0: 2020- Update to Ansys 2020R1 v201
-   - Updated keywords to Ansys 2020R1
+** Version 20.4.0: 2020-04, update to Ansys 2020R1
+   - Updated keywords to Ansys 2020R1 (v201)
+   - The apdl-mode function is now called when opening files with the
+     suffixes ".mac", ".dat" and ".inp". without further user
+     configuration.
 
 ** Version 20.3.0: 2020-03 Melpa installation
    - You can now install APDL-Mode from the [[https://melpa.org/][Melpa]] package archive!
