--- a/NEWS.org
+++ b/NEWS.org
@@ -1,4 +1,4 @@
-#+DATE: Time-stamp: <2020-03-26>
+#+DATE: Time-stamp: <2020-03-28>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: html-link-use-abs-url:nil html-postamble:t html-preamble:t
 #+OPTIONS: html-scripts:t html-style:t html5-fancy:nil tex:t
@@ -19,6 +19,9 @@
 Copyright (C) 2006 - 2020  H. Dieter Wilhelm, GPL V3
 ** Version 20.4.0: 2020-04, update to Ansys 2020R1
    - Updated keywords to Ansys 2020R1 (v201)
+   - Added documentation in GNU Info format and modified the menu
+     entry APDL-Mode Online Documentation to APDL-Mode Documentation
+     which points to the GNU-Emacs internal Info Viewer (C-h i).
    - Added a menu entry for displaying the user's taken licenses
    - Files with the suffixes ".mac", ".dat" and ".inp" are openend in
      apdl-mode without further user configuration.
@@ -33,7 +36,6 @@ Copyright (C) 2006 - 2020  H. Dieter Wilhelm, GPL V3
    - Added customisation section for Worbench / Discover Aim templates
    - Improved initialisation of Ansys installation dependent
      parameters
-
 ** Version 20.2.0: 2020-03: Updated keywords to Ansys v195
    - Added a template preview system for Worbench `Command (APDL)'
      objects with the keybinding `C-c C-w' (this keybinding was
